--- a/package.json
+++ b/package.json
@@ -1,38 +1,36 @@
 {
-
   "type": "module",
-
   "name": "secure-api",
-
   "version": "1.0.0",
-
   "description": "",
-
-  "main": "index.js",
-
+  "main": "src/index.js",
   "scripts": {
-
-    "test": "echo \"Error: no test specified\" && exit 1"
-
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
-
   "keywords": [],
-
   "author": "",
-
   "license": "ISC",
-
   "dependencies": {
-
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
-
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
-
     "express-rate-limit": "^6.7.0",
-
-    "express-session": "^1.17.3"
-
+    "express-session": "^1.17.3",
+    "express-winston": "^4.2.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
+    "response-time": "^2.3.2",
+    "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
+    "npm-seven-issue-dep": "git+ssh://git@gitlab.com/klesun/npm-seven-issue-dep#5f1b313978986974d4364585e6bd3689276f1697",
+    "typescript": "^4.9.4"
   }
-
 }
-
